    better work with Mac OS X.
    The following environment variables have been introduced
    to customize these settings:
    - OMV_SAMBA_SHARE_FRUIT_VETOAPPLEDOUBLE (defaults to 'no')
    - OMV_SAMBA_SHARE_FRUIT_NFSACES (defaults to 'no')
    - OMV_SAMBA_SHARE_FRUIT_WIPEINTENTIONALLYLEFTBLANKRFORK (defaults to 'yes')
    - OMV_SAMBA_SHARE_FRUIT_DELETEEMPTYADFILES (defaults to 'yes')

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 18 Aug 2022 10:16:56 +0200

openmediavault (6.0.35-1) stable; urgency=low

  * Update locale files.
  * Remove checkbox in the confirmation dialog when applying
    or reverting configuration changes.
  * Unset smartmontools.service condition check which prevents
    the service from getting started in virtualized environments.
  * Issue #1371: Bond mode LACP (802.3ad) forces primary device
    erroneously.
  * Issue #1373: Standby scheduled task still uses hibernate
    command despite configuration.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 15 Aug 2022 10:25:22 +0200

openmediavault (6.0.34-1) stable; urgency=low

  * Various UI improvements.
  * Let monit wait 30 seconds before it starts checking the
    services. This should prevent alert messages by giving
    services enough time to settle up. The delay can be customized
    via the OMV_MONIT_CHECK_START_DELAY environment variable.
  * Issue #1369: Deploy correct SMB async I/O configuration.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 02 Aug 2022 18:27:46 +0200

openmediavault (6.0.33-1) stable; urgency=low

  * Update locale files.
  * Fix bug in rsync.secrets file with multiple users.
  * Allow to add multiple extra options in rsyncd modules.
  * Issue #1364: Display shared folder name in ACL page.
  * Issue #1366: Increase the accuracy of the search for existing
    mount points.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 28 Jul 2022 02:41:16 +0200

openmediavault (6.0.32-1) stable; urgency=low
